refactor(repository): url repo fixes
Refactor & fix how urls were being saved in the repo.
Additional API docs around performing updates
